[gd_scene load_steps=78 format=2]

[ext_resource path="res://GUI/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://sprites/player (2).png" type="Texture" id=2]
[ext_resource path="res://sprites/Player/player.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://sprites/player.png" type="Texture" id=5]
[ext_resource path="res://Scenes/attack.gd" type="Script" id=6]
[ext_resource path="res://sound effects/hit.wav" type="AudioStream" id=7]
[ext_resource path="res://Scripts/hurtbox.gd" type="Script" id=8]
[ext_resource path="res://Scripts/player collision.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=104]
extents = Vector2( 6, 9 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 5 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 5 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 5 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 5 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 5 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 2 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 2 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 2 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 2 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 2 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 240, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 48, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 96, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 144, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 5 )
region = Rect2( 240, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 5 )
region = Rect2( 192, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 5 )
region = Rect2( 144, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 5 )
region = Rect2( 96, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 0, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 48, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 96, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 144, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 48, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 96, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 2 )
region = Rect2( 144, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 5 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 5 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 5 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 5 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 5 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 2 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 2 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 2 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 2 )
region = Rect2( 48, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 2 )
region = Rect2( 96, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 2 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 2 )
region = Rect2( 192, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 2 )
region = Rect2( 240, 240, 48, 48 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 169 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": true,
"name": "player_down",
"speed": 10.0
}, {
"frames": [ SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ) ],
"loop": true,
"name": "player_hit_down",
"speed": 10.0
}, {
"frames": [ SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ) ],
"loop": false,
"name": "player_hit_left",
"speed": 10.0
}, {
"frames": [ SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ) ],
"loop": false,
"name": "player_hit_right",
"speed": 10.0
}, {
"frames": [ SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ) ],
"loop": true,
"name": "player_hit_up",
"speed": 10.0
}, {
"frames": [ SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ) ],
"loop": true,
"name": "player_left",
"speed": 10.0
}, {
"frames": [ SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ) ],
"loop": true,
"name": "player_right",
"speed": 10.0
}, {
"frames": [ SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ) ],
"loop": true,
"name": "player_up",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=102]
radius = 14.0357

[sub_resource type="CapsuleShape2D" id=103]
radius = 8.0
height = 8.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 195, 73 )
z_index = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 90 )
texture = ExtResource( 3 )

[node name="player collision" type="CollisionShape2D" parent="."]
visible = false
light_mask = 2
position = Vector2( 2, 11 )
shape = SubResource( 104 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -199, -71 )
offset = Vector2( 200, 90 )
current = true
limit_left = -550
limit_top = -130
limit_right = 238
limit_bottom = 425
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="player_animation" type="AnimatedSprite" parent="."]
position = Vector2( 1, 3 )
frames = SubResource( 25 )
animation = "idle_down"
frame = 1
playing = true
script = ExtResource( 1 )

[node name="player_area" type="Area2D" parent="."]
visible = false
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
position = Vector2( 1, 12 )
shape = SubResource( 102 )

[node name="hitboxes" type="Area2D" parent="."]
visible = false
position = Vector2( 1, 13 )
script = ExtResource( 6 )

[node name="right" type="CollisionShape2D" parent="hitboxes"]
position = Vector2( 11, 0 )
shape = SubResource( 103 )
disabled = true

[node name="up" type="CollisionShape2D" parent="hitboxes"]
position = Vector2( 1, -10 )
rotation = 1.5708
shape = SubResource( 103 )
disabled = true

[node name="left" type="CollisionShape2D" parent="hitboxes"]
position = Vector2( -10, 0 )
shape = SubResource( 103 )
disabled = true

[node name="down" type="CollisionShape2D" parent="hitboxes"]
position = Vector2( 0, 9 )
rotation = 1.5708
shape = SubResource( 103 )
disabled = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 4.643

[node name="hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2( 1, 0 )
script = ExtResource( 8 )

[node name="player collision" type="CollisionShape2D" parent="hurtbox"]
light_mask = 2
position = Vector2( 1, 11 )
shape = SubResource( 104 )
script = ExtResource( 9 )

[connection signal="animation_finished" from="player_animation" to="." method="_on_player_animation_animation_finished"]
[connection signal="body_entered" from="hitboxes" to="hitboxes" method="_on_hitboxes_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
